Fix card back word wrap

--- a/src/components/GameCardBack/GameCardBack.scss
+++ b/src/components/GameCardBack/GameCardBack.scss
@@ -19,5 +19,6 @@
       );
     background-size: contain;
     text-align: center;
+    word-break: break-word;
   }
 }
